--- a/plenario/templates/api-docs.html
+++ b/plenario/templates/api-docs.html
@@ -96,6 +96,18 @@
                     <td><strong><code>update_freq</code></strong></td>
                     <td>Update frequency.</td>
                   </tr>
+                  <tr>
+                    <td><strong><code>num_rows</code></strong></td>
+                    <td>Number of rows in the dataset. <strong>Note:</strong> Only provided when <strong>dataset_name</strong> is defined.</td>
+                  </tr>
+                  <tr>
+                    <td><strong><code>num_weather_observations</code></strong></td>
+                    <td>Number of rows in the dataset that are associated with weather observations. <strong>Note:</strong> Only provided when <strong>dataset_name</strong> is defined.</td>
+                  </tr>
+                  <tr>
+                    <td><strong><code>num_rows_w_censusblocks</code></strong></td>
+                    <td>Number of rows in the dataset that are matched to census blocks. <strong>Note:</strong> Only provided when <strong>dataset_name</strong> is defined.</td>
+                  </tr>
                 </tbody>
               </table>
 
