num_rows, num_weather_observations, and num_rows_w_censusblocks now exposed for all API calls to /datasets

--- a/plenario/templates/api-docs.html
+++ b/plenario/templates/api-docs.html
@@ -98,15 +98,15 @@
                   </tr>
                   <tr>
                     <td><strong><code>num_rows</code></strong></td>
-                    <td>Number of rows in the dataset. <strong>Note:</strong> Only provided when <strong>dataset_name</strong> is defined.</td>
+                    <td>Number of rows in the dataset.</td>
                   </tr>
                   <tr>
                     <td><strong><code>num_weather_observations</code></strong></td>
-                    <td>Number of rows in the dataset that are associated with weather observations. <strong>Note:</strong> Only provided when <strong>dataset_name</strong> is defined.</td>
+                    <td>Number of rows in the dataset that are associated with weather observations.</td>
                   </tr>
                   <tr>
                     <td><strong><code>num_rows_w_censusblocks</code></strong></td>
-                    <td>Number of rows in the dataset that are matched to census blocks. <strong>Note:</strong> Only provided when <strong>dataset_name</strong> is defined.</td>
+                    <td>Number of rows in the dataset that are matched to census blocks.</td>
                   </tr>
                 </tbody>
               </table>
