trying out implementing simple models and collection for map, query, and filters.

--- a/plenario/templates/explore.html
+++ b/plenario/templates/explore.html
@@ -32,7 +32,14 @@
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.dataTables.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/highcharts.js') }}"></script>
 
+    <script type="text/javascript" src="{{ url_for('static', filename='js/explore/models/mapModel.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/explore/models/queryModel.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/explore/models/filterModel.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/explore/models/filterCollection.js') }}"></script>
+
     <script type="text/javascript" src="{{ url_for('static', filename='js/chart_helper.js') }}"></script>
+
+    <script type="text/javascript" src="{{ url_for('static', filename='js/backbone.localStorage.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/explore/helpers.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/explore/router.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/explore/views/about-view.js') }}"></script>
